Sun Nov  5 15:08:09 CET 2006 (tk)
---------------------------------
  * libclamav/pe.c: don't report I/O error when EP is near (less than 200 bytes)
		    to the end of file (fixes handling of RCryptor encrypted
		    files and some infected execs)

Sun Nov  5 09:57:44 GMT 2006 (njh)
----------------------------------
  * clamav-milter:	Another go at bug 115

Sun Nov  5 02:25:39 CET 2006 (acab)
-----------------------------------
  * libclamav/pe.c:	RVA broken.executable checks
  			skip checks on virtual-only sections (reported by
			Andrey J. Melnikoff (TEMHOTA) <temnota * kmv.ru> )

Sun Nov  5 00:45:44 CET 2006 (acab)
-----------------------------------
  * libclamav/pe.c:	add broken.executable checks on alignments

Sun Nov  5 00:20:02 CET 2006 (acab)
-----------------------------------
  * libclamav/pe.c:     lseek fix for last commit

Sat Nov  4 23:57:14 CET 2006 (acab)
-----------------------------------
  * libclamav/pe.c:	Handle long optional header

Sat Nov  4 19:08:47 CET 2006 (acab)
-----------------------------------
  * libclamav/petite.c:	Fix max section count

Sat Nov  4 18:52:36 CET 2006 (acab)
-----------------------------------
  * libclamav/pe.c:	Move pe_plus return to a more convenient location

Fri Nov  3 21:28:13 GMT 2006 (njh)
----------------------------------
  * clamav-milter:	Fix compilation error in session mode, bug 115

Fri Nov  3 19:47:42 GMT 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Partial fix for bug 33

Thu Nov  2 09:36:06 GMT 2006 (njh)
----------------------------------
  * libclamav/js/jsint.h:	Fix compilation error under FreeBSD6.1

Thu Nov  2 00:20:36 CET 2006 (tk)
---------------------------------
  * freshclam/manager.c: make update messages more precise

Wed Nov  1 19:15:57 CET 2006 (tk)
---------------------------------
  * libclamav/others.c: add cli_strdup(), thanks to NJH

Wed Nov  1 18:59:48 CET 2006 (tk)
---------------------------------