@@ -1,3 +1,10 @@
+Sun Nov  5 19:11:28 CET 2006 (acab)
+-----------------------------------
+  * libclamav/regex_list.c: apply patch from Edvin to:
+                            fix jump on uninitialized variable
+                            fix improprer string length calculation
+			    - closes bug 52 -
+
 Sun Nov  5 15:08:09 CET 2006 (tk)
 ---------------------------------
   * libclamav/pe.c: don't report I/O error when EP is near (less than 200 bytes)
